--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ h6 {
 }
 .wrapper main section#content img {
   align-self: center;
-  width: 50%;
+  width: 330px;
   height: auto;
   max-width: 100%;
   object-fit: contain;
