--- a/ressources/less/pages/home.less
+++ b/ressources/less/pages/home.less
@@ -98,7 +98,7 @@
 
             img {
                 align-self: center;
-                width: 50%;
+                width: 330px;
                 height: auto;
                 max-width: 100%;
                 object-fit: contain;
