bugfix: path to fonts updated for new stored CSS file

--- a/ressources/less/basics/variables.less
+++ b/ressources/less/basics/variables.less
@@ -2,7 +2,7 @@
 @font-family: "Poppins", Arial, sans-serif;
 
 // Font path - Korrigierter Pfad
-@font-path: "../ressources/fonts/";
+@font-path: "../fonts/";
 
 // Root font size
 @root-font-size: 18px;
